--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,19 @@
 body{
     background-color: gray;
 }
-#wrapper{
-    padding: 0px, 200px;
-}
-#our-team{
-    border: 1px solid black;
+/* #our-team{
 
-}
+
+} */
+/* #our-team img{
+    width: 200px;
+
+} */
+/* #our-team .row{
+    padding-right: 0;
+    padding-left: 0;
+} */
+/* .mycard{
+    border: 1px solid white;
+    background-color: rgb(4, 164, 238);
+} */
